--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -6,8 +6,12 @@ on:
       - '**.dart'
       - 'pubspec.*'
       - 'analysis_options.yaml'
-      - 'assets/libedax/**'
       - '.github/workflows/flutter_ci.yaml'
+      - '.github/scripts/**'
+      - 'macos/**'
+      - 'linux/**'
+      - 'windows/**'
+      - 'assets/**'
       - '.libedax_assets_tag'
       - '.codecov.yml'
   push:
@@ -16,8 +20,12 @@ on:
       - '**.dart'
       - 'pubspec.*'
       - 'analysis_options.yaml'
-      - 'assets/libedax/**'
       - '.github/workflows/flutter_ci.yaml'
+      - '.github/scripts/**'
+      - 'macos/**'
+      - 'linux/**'
+      - 'windows/**'
+      - 'assets/**'
       - '.libedax_assets_tag'
       - '.codecov.yml'
 
@@ -29,7 +37,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - name: setup flutter channel
-        run: .github/scripts/setup_flutter_channel.sh
+        run: ./scripts/setup_flutter_channel.sh
       - run: flutter format -l 120 --set-exit-if-changed .
 
   analyze:
@@ -39,31 +47,33 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - name: setup flutter channel
-        run: .github/scripts/setup_flutter_channel.sh
+        run: ./scripts/setup_flutter_channel.sh
       - name: install dependencies
         run: flutter pub get
       - run: flutter analyze --fatal-infos --fatal-warnings .
 
-  widget_test:
+  test:
     needs: [format, analyze]
     runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
+    timeout-minutes: 20
     strategy:
       matrix:
         os: [windows-2019, macos-11, ubuntu-20.04] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
         include:
           - os: windows-2019
             setup_desktop_script: .github/scripts/setup_on_windows.sh
+            integration_test_command: flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.info
           - os: macos-11
             setup_desktop_script: .github/scripts/setup_on_macos.sh
+            integration_test_command: flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.info
           - os: ubuntu-20.04
             setup_desktop_script: .github/scripts/setup_on_linux.sh
-
+            integration_test_command: 'timeout 180 xvfb-run -a flutter drive -d linux --driver=integration_test/driver.dart --target=integration_test/app_test.dart || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
       - name: setup flutter channel
-        run: .github/scripts/setup_flutter_channel.sh
+        run: ./scripts/setup_flutter_channel.sh
       - name: setup flutter desktop
         shell: bash
         run: ${{ matrix.setup_desktop_script }}
@@ -71,12 +81,18 @@ jobs:
         run: flutter doctor -v
       - name: install dependencies
         run: flutter pub get
-      - name: run test with retry
+      - name: run widget test with retry
         uses: nick-invision/retry@v2
         with:
-          timeout_minutes: 10
+          timeout_minutes: 5
           max_attempts: 3
-          command: flutter test --concurrency=1 --verbose --coverage --coverage-path=./coverage/lcov.info
+          command: flutter test test --concurrency=1 --verbose --coverage --coverage-path=./coverage/lcov.info
+      - name: run integration test with retry
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 5
+          max_attempts: 3
+          command: ${{ matrix.integration_test_command }}
       - uses: codecov/codecov-action@v2.1.0
         with:
           file: ./coverage/lcov.info
