cache flutter on workflow

--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -36,6 +36,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2.2.0
+        with:
+          cache: true
       - name: setup flutter channel
         run: ./scripts/setup_flutter_channel.sh
       - run: flutter format -l 120 --set-exit-if-changed .
@@ -46,6 +48,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2.2.0
+        with:
+          cache: true
       - name: setup flutter channel
         run: ./scripts/setup_flutter_channel.sh
       - name: install dependencies
