--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -55,6 +55,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2.2.0
+        with:
+          cache: true
       - name: setup flutter channel
         run: ./scripts/setup_flutter_channel.sh
       - name: setup flutter desktop
