--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -28,6 +28,7 @@ jobs:
         shell: bash
         run: .github/scripts/setup_on_macos.sh
 
+      - uses: ruby/setup-ruby@v1
       - name: dry-run deployment script with retry
         uses: nick-invision/retry@v2
         with:
@@ -37,5 +38,5 @@ jobs:
             zsh {0} # See: https://github.com/actions/virtual-environments/issues/264#issuecomment-574032011
             echo $ZSH_NAME $ZSH_VERSION
             REVISION=$GITHUB_SHA
-            P8_PATH="README.md" # dummy for dry-run
+            P8_PATH="../README.md" # dummy for dry-run
             ./scripts/deploy_macos_app_to_app_store.sh -revision $REVISION -p8-file-path $P8_PATH --dry-run
