--- a/.github/workflows/website_build.yaml
+++ b/.github/workflows/website_build.yaml
@@ -1,16 +1,19 @@
 # See: https://docusaurus.io/docs/deployment#deploying-to-github-pages
 
-name: Deploy Website
+name: Build Website
 
 on:
+  pull_request:
+    paths:
+      - '.github/workflows/website_build.yaml'
   push:
     branches: [main]
     paths:
-      - '.github/workflows/deploy_website.yaml'
+      - '.github/workflows/website_build.yaml'
       - 'website/**'
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -27,6 +30,6 @@ jobs:
         git config --global user.email "actions@github.com"
         git config --global user.name "gh-actions"
     - run: yarn install --frozen-lockfile
-    - run: npm run deploy
+    - run: npm run build
       env:
         GIT_USER: ${{ github.actor }}:${{ github.token }}
