mild fix workflow trigger

--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -6,12 +6,14 @@ on:
       - 'macos/**'
       - 'scripts/deploy_macos_app_to_app_store.sh'
       - '.github/workflows/deploy_macos_dry_run.yaml'
+      - 'pubspec.*'
   push:
     branches: [main]
     paths:
       - 'macos/**'
       - 'scripts/deploy_macos_app_to_app_store.sh'
       - '.github/workflows/deploy_macos_dry_run.yaml'
+      - 'pubspec.*'
 
 jobs:
   deployment:
