--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -25,6 +25,7 @@ jobs:
         with:
           cache: true
       - name: setup flutter channel
+        shell: bash
         run: ./scripts/setup_flutter_channel.sh
       - name: setup flutter desktop
         shell: bash
