--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -37,6 +37,7 @@ jobs:
         with:
           cache: true
       - name: setup flutter channel
+        shell: bash
         run: ./scripts/setup_flutter_channel.sh
       - run: flutter format -l 120 --set-exit-if-changed .
 
@@ -49,6 +50,7 @@ jobs:
         with:
           cache: true
       - name: setup flutter channel
+        shell: bash
         run: ./scripts/setup_flutter_channel.sh
       - name: install dependencies
         run: flutter pub get
@@ -75,6 +77,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2.2.1
       - name: setup flutter channel
+        shell: bash
         run: ./scripts/setup_flutter_channel.sh
       - name: setup flutter desktop
         shell: bash
