--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,6 +42,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2.2.1
       - name: setup flutter channel
+        shell: bash
         run: ./scripts/setup_flutter_channel.sh
       - name: setup flutter desktop
         shell: bash
