--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -21,6 +21,9 @@ jobs:
         run: ./scripts/setup_flutter_channel.sh
       - run: flutter doctor -v
       - run: flutter pub upgrade --null-safety # See: https://dart.dev/tools/pub/cmd/pub-upgrade#--null-safety
+      - if: runner.os == 'macOS'
+        working-directory: macos
+        run: pod install
 
       # See: https://github.com/peter-evans/create-pull-request/tree/master#reference-example
       - name: create PR
