--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -16,14 +16,18 @@ jobs:
       - uses: subosito/flutter-action@v2.3.0
         with:
           cache: true
+      - run: flutter doctor -v
       - name: setup flutter channel
         shell: bash
         run: ./scripts/setup_flutter_channel.sh
-      - run: flutter doctor -v
+      - name: setup flutter desktop
+        shell: bash
+        run: |-
+          flutter config --enable-macos-desktop
+          flutter config --enable-windows-desktop
+          flutter config --enable-linux-desktop
+
       - run: flutter pub upgrade --null-safety # See: https://dart.dev/tools/pub/cmd/pub-upgrade#--null-safety
-      - if: runner.os == 'macOS'
-        working-directory: macos
-        run: pod install
       - name: upgrade external binary
         shell: zsh {0} # See: https://github.com/actions/virtual-environments/issues/264#issuecomment-574032011
         run: ./scripts/fetch_libedax_assets.sh
