--- a/.github/workflows/deploy_website.yaml
+++ b/.github/workflows/deploy_website.yaml
@@ -27,6 +27,6 @@ jobs:
         git config --global user.email "actions@github.com"
         git config --global user.name "gh-actions"
     - run: yarn install --frozen-lockfile
-    - run: npm run deploy
+    - run: yarn deploy
       env:
         GIT_USER: ${{ github.actor }}:${{ github.token }}
