--- a/.github/workflows/website_build.yaml
+++ b/.github/workflows/website_build.yaml
@@ -31,6 +31,6 @@ jobs:
         git config --global user.email "actions@github.com"
         git config --global user.name "gh-actions"
     - run: yarn install --frozen-lockfile
-    - run: npm run build
+    - run: yarn build
       env:
         GIT_USER: ${{ github.actor }}:${{ github.token }}
