--- a/website/package.json
+++ b/website/package.json
@@ -17,6 +17,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "//": "See: https://github.com/facebook/docusaurus/pull/6561",
     "@docusaurus/core": "2.0.0-beta.15",
     "@docusaurus/preset-classic": "2.0.0-beta.15",
     "@mdx-js/react": "^1.6.21",
