--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,9 @@ dependencies:
   crypto: ^3.0.1
   cupertino_icons: ^1.0.4
   # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
-  file_selector: ^0.8.3
+  file_selector: ^0.8.4
   file_selector_linux: ^0.0.2+1
-  file_selector_macos: ^0.0.4+1
+  file_selector_macos: ^0.8.2
   file_selector_windows: ^0.8.2
   flutter:
     sdk: flutter
