--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -39,16 +39,19 @@ jobs:
           - os: ubuntu-20.04
             subcommand: linux
             setup_desktop_script: .github/scripts/setup_on_linux.sh
+            diff_check_native_deps_script: .github/scripts/diff_check_native_deps_for_linux.sh
             prepare_to_pack_script: .github/scripts/prepare_to_pack_for_linux.sh
             distribution_path: build/linux/x64/release
           - os: windows-2019
             subcommand: windows
             setup_desktop_script: .github/scripts/setup_on_windows.sh
+            diff_check_native_deps_script: .github/scripts/diff_check_native_deps_for_windows.sh
             prepare_to_pack_script: .github/scripts/prepare_to_pack_for_windows.sh
             distribution_path: build/windows/runner/Release
           - os: macos-11
             subcommand: macos
             setup_desktop_script: .github/scripts/setup_on_macos.sh
+            diff_check_native_deps_script: .github/scripts/diff_check_native_deps_for_macos.sh
             prepare_to_pack_script: .github/scripts/prepare_to_pack_for_macos.sh
             distribution_path: build/macos/Build/Products/release
 
@@ -67,6 +70,11 @@ jobs:
         run: flutter doctor -v
       - name: install dependencies
         run: flutter pub get
+
+      - name: diff check native deps
+        shell: bash
+        run: ${{ matrix.diff_check_native_deps_script }}
+
       - name: build
         run: flutter build ${{ matrix.subcommand }} --${{ matrix.mode }}
 
