--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -26,7 +26,7 @@ jobs:
           cache: true
       - name: setup flutter channel
         shell: bash
-        run: ./scripts/setup_flutter_channel.sh
+        run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
         run: .github/scripts/macos/setup.sh
