--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -38,7 +38,7 @@ jobs:
           cache: true
       - name: setup flutter channel
         shell: bash
-        run: ./scripts/setup_flutter_channel.sh
+        run: ./scripts/setup_flutter.sh
       - run: flutter format -l 120 --set-exit-if-changed .
 
   analyze:
@@ -51,7 +51,7 @@ jobs:
           cache: true
       - name: setup flutter channel
         shell: bash
-        run: ./scripts/setup_flutter_channel.sh
+        run: ./scripts/setup_flutter.sh
       - name: install dependencies
         run: flutter pub get
       - run: flutter analyze --fatal-infos --fatal-warnings .
@@ -65,20 +65,20 @@ jobs:
         os: [windows-2019, macos-11, ubuntu-20.04] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
         include:
           - os: windows-2019
-            setup_desktop_script: .github/scripts/setup_on_windows.sh
+            setup_desktop_script: .github/scripts/windows/setup.sh
             integration_test_command: flutter test integration_test --verbose
           - os: macos-11
-            setup_desktop_script: .github/scripts/setup_on_macos.sh
+            setup_desktop_script: .github/scripts/macos/setup.sh
             integration_test_command: flutter test integration_test --verbose
           - os: ubuntu-20.04
-            setup_desktop_script: .github/scripts/setup_on_linux.sh
+            setup_desktop_script: .github/scripts/linux/setup.sh
             integration_test_command: 'timeout 180 xvfb-run -a flutter test integration_test --verbose || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2.3.0
       - name: setup flutter channel
         shell: bash
-        run: ./scripts/setup_flutter_channel.sh
+        run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
         run: ${{ matrix.setup_desktop_script }}
