--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -19,13 +19,7 @@ jobs:
       - run: flutter doctor -v
       - name: setup flutter channel
         shell: bash
-        run: ./scripts/setup_flutter_channel.sh
-      - name: setup flutter desktop
-        shell: bash
-        run: |-
-          flutter config --enable-macos-desktop
-          flutter config --enable-windows-desktop
-          flutter config --enable-linux-desktop
+        run: ./scripts/setup_flutter.sh
 
       - run: flutter pub upgrade --null-safety # See: https://dart.dev/tools/pub/cmd/pub-upgrade#--null-safety
       - name: upgrade external binary
