--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -24,18 +24,18 @@ jobs:
         include:
           - os: ubuntu-20.04
             subcommand: linux
-            setup_desktop_script: .github/scripts/setup_on_linux.sh
-            prepare_to_pack_script: .github/scripts/prepare_to_pack_for_linux.sh
+            setup_desktop_script: .github/scripts/linux/setup.sh
+            prepare_to_pack_script: .github/scripts/linux/prepare_to_pack.sh
             distribution_path: build/linux/x64/release
           - os: windows-2019
             subcommand: windows
-            setup_desktop_script: .github/scripts/setup_on_windows.sh
-            prepare_to_pack_script: .github/scripts/prepare_to_pack_for_windows.sh
+            setup_desktop_script: .github/scripts/windows/setup.sh
+            prepare_to_pack_script: .github/scripts/windows/prepare_to_pack.sh
             distribution_path: build/windows/runner/Release
           - os: macos-11
             subcommand: macos
-            setup_desktop_script: .github/scripts/setup_on_macos.sh
-            prepare_to_pack_script: .github/scripts/prepare_to_pack_for_macos.sh
+            setup_desktop_script: .github/scripts/macos/setup.sh
+            prepare_to_pack_script: .github/scripts/macos/prepare_to_pack.sh
             distribution_path: build/macos/Build/Products/release
 
     steps:
@@ -43,7 +43,7 @@ jobs:
       - uses: subosito/flutter-action@v2.3.0
       - name: setup flutter channel
         shell: bash
-        run: ./scripts/setup_flutter_channel.sh
+        run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
         run: ${{ matrix.setup_desktop_script }}
