--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -42,4 +42,4 @@ jobs:
             echo $ZSH_NAME $ZSH_VERSION
             REVISION=$GITHUB_SHA
             P8_PATH="../README.md" # dummy for dry-run
-            ./scripts/deploy_macos_app_to_app_store.sh -revision $REVISION -p8-file-path $P8_PATH --dry-run
+            ./scripts/deploy_macos_app_to_app_store.sh -revision $REVISION -p8-file-path $P8_PATH --dry-run --skip-test
