--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -30,7 +30,9 @@ jobs:
       - name: create PR
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.PAT }} # See: https://github.com/peter-evans/create-pull-request/blob/master/docs/concepts-guidelines.md#triggering-further-workflow-runs
+          # See: https://github.com/peter-evans/create-pull-request/blob/master/docs/concepts-guidelines.md#triggering-further-workflow-runs
+          # See: https://github.com/peter-evans/create-pull-request/issues/48#issuecomment-537478081
+          token: ${{ secrets.PAT }}
           # See: https://github.com/peter-evans/create-pull-request/issues/593
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
