--- a/.github/workflows/website_deps.yaml
+++ b/.github/workflows/website_deps.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   upgrade_flutter_dependencies:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
