--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,7 +19,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2019, macos-11]
+        os: [ubuntu-latest, windows-latest, macos-11]
         mode: [release]
         include:
           - os: ubuntu-latest
@@ -27,7 +27,7 @@ jobs:
             setup_desktop_script: .github/scripts/linux/setup.sh
             prepare_to_pack_script: .github/scripts/linux/prepare_to_pack.sh
             distribution_path: build/linux/x64/release
-          - os: windows-2019
+          - os: windows-latest
             subcommand: windows
             setup_desktop_script: .github/scripts/windows/setup.sh
             prepare_to_pack_script: .github/scripts/windows/prepare_to_pack.sh
