--- a/.github/workflows/macos_deps.yaml
+++ b/.github/workflows/macos_deps.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   upgrade_flutter_dependencies:
-    runs-on: macos-11
+    runs-on: macos-latest
     timeout-minutes: 10
     steps:
       - name: upgrade macos deps
