--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   deployment:
-    runs-on: macos-11
+    runs-on: macos-latest
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v3
