--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-11]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         mode: [release]
         include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
           - os: ubuntu-latest
@@ -48,7 +48,7 @@ jobs:
             diff_check_native_deps_script: .github/scripts/windows/diff_check_native_deps.sh
             prepare_to_pack_script: .github/scripts/windows/prepare_to_pack.sh
             distribution_path: build/windows/runner/Release
-          - os: macos-11
+          - os: macos-latest
             subcommand: macos
             setup_desktop_script: .github/scripts/macos/setup.sh
             diff_check_native_deps_script: .github/scripts/macos/diff_check_native_deps.sh
