--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,7 +19,7 @@ jobs:
     timeout-minutes: 30
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-11]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         mode: [release]
         include:
           - os: ubuntu-latest
@@ -32,7 +32,7 @@ jobs:
             setup_desktop_script: .github/scripts/windows/setup.sh
             prepare_to_pack_script: .github/scripts/windows/prepare_to_pack.sh
             distribution_path: build/windows/runner/Release
-          - os: macos-11
+          - os: macos-latest
             subcommand: macos
             setup_desktop_script: .github/scripts/macos/setup.sh
             prepare_to_pack_script: .github/scripts/macos/prepare_to_pack.sh
