add workflows to upgrade macos and website deps, upgrade runner OS (#379)
* add workflow to upgrade macos gem deps

* add workflow to upgrade website deps

* bump @mdx-js/react

* fix workflow

* replace ubuntu-20.04 to ubuntu-latest

* replace windows-2019 to windows-latest

* replace macos-11 to macos-latest

--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -33,22 +33,22 @@ jobs:
     strategy:
       fail-fast: false # I want results from all OSes even if one fails.
       matrix:
-        os: [ubuntu-20.04, windows-2019, macos-11]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         mode: [release]
         include: # See: https://docs.github.com/ja/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#using-environment-variables-in-a-matrix
-          - os: ubuntu-20.04
+          - os: ubuntu-latest
             subcommand: linux
             setup_desktop_script: .github/scripts/linux/setup.sh
             diff_check_native_deps_script: .github/scripts/linux/diff_check_native_deps.sh
             prepare_to_pack_script: .github/scripts/linux/prepare_to_pack.sh
             distribution_path: build/linux/x64/release
-          - os: windows-2019
+          - os: windows-latest
             subcommand: windows
             setup_desktop_script: .github/scripts/windows/setup.sh
             diff_check_native_deps_script: .github/scripts/windows/diff_check_native_deps.sh
             prepare_to_pack_script: .github/scripts/windows/prepare_to_pack.sh
             distribution_path: build/windows/runner/Release
-          - os: macos-11
+          - os: macos-latest
             subcommand: macos
             setup_desktop_script: .github/scripts/macos/setup.sh
             diff_check_native_deps_script: .github/scripts/macos/diff_check_native_deps.sh
