--- a/.github/workflows/macos_deps.yaml
+++ b/.github/workflows/macos_deps.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 10
     steps:
+      - uses: actions/checkout@v3
       - name: upgrade macos deps
         working-directory: macos
         run: |
