--- a/website/package.json
+++ b/website/package.json
@@ -17,7 +17,7 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "//": "See: https://github.com/facebook/docusaurus/pull/6561",
+    "//": "See: https://github.com/facebook/docusaurus/pull/6561 , https://github.com/facebook/docusaurus/issues/6520",
     "@docusaurus/core": "2.0.0-beta.18",
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@mdx-js/react": "^1.6.22",
