enable auto-merge on deps PR. See: https://github.com/peter-evans/create-pull-request/tree/main#auto-merge

--- a/.github/workflows/website_deps.yaml
+++ b/.github/workflows/website_deps.yaml
@@ -44,3 +44,12 @@ jobs:
             website
           assignees: sensuikan1973
           reviewers: sensuikan1973
+
+      # See: https://github.com/peter-evans/create-pull-request/tree/main#auto-merge
+      - name: enable auto-merge
+        if: steps.create_pull_request.outputs.pull-request-operation == 'created'
+        uses: peter-evans/enable-pull-request-automerge@v2
+        with:
+          token: ${{ secrets.PAT }}
+          pull-request-number: ${{ steps.create_pull_request.outputs.pull-request-number }}
+          merge-method: squash
