--- a/.github/workflows/website_deps.yaml
+++ b/.github/workflows/website_deps.yaml
@@ -22,6 +22,7 @@ jobs:
 
       # See: https://github.com/peter-evans/create-pull-request/tree/master#reference-example
       - name: create PR
+        id: create_pull_request
         uses: peter-evans/create-pull-request@v4
         with:
           # See: https://github.com/peter-evans/create-pull-request/blob/master/docs/concepts-guidelines.md#triggering-further-workflow-runs
