--- a/.github/workflows/dependabot_auto_merge.yaml
+++ b/.github/workflows/dependabot_auto_merge.yaml
@@ -1,4 +1,5 @@
 # See: https://docs.github.com/en/code-security/dependabot/working-with-dependabot/automating-dependabot-with-github-actions#enable-auto-merge-on-a-pull-request
+# See: https://github.com/sensuikan1973/pedax/settings/branches
 
 name: Dependabot auto-merge
 
