--- a/.github/workflows/bump_ruby_version.yaml
+++ b/.github/workflows/bump_ruby_version.yaml
@@ -18,6 +18,7 @@ jobs:
           ~/.rbenv/bin/rbenv --version
       - name: upgrade ruby version
         run: |
+          ~/.rbenv/bin/rbenv init || true
           latest_version=$(~/.rbenv/bin/rbenv install -l | grep -v - | tail -1)
           ~/.rbenv/bin/rbenv install $latest_version
           ~/.rbenv/bin/rbenv local $latest_version
