--- a/.github/workflows/dependabot_auto_merge.yaml
+++ b/.github/workflows/dependabot_auto_merge.yaml
@@ -1,6 +1,8 @@
 # See: https://docs.github.com/en/code-security/dependabot/working-with-dependabot/automating-dependabot-with-github-actions#enable-auto-merge-on-a-pull-request
 # See: https://github.com/sensuikan1973/pedax/settings/branches
 
+# foo
+
 name: Dependabot auto-merge
 
 on: pull_request
