--- a/.github/workflows/prevent_typos.yaml
+++ b/.github/workflows/prevent_typos.yaml
@@ -6,9 +6,7 @@ on: pull_request
 
 jobs:
   check:
-    name: Spell Check with Typos
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - uses: crate-ci/typos@v1
+      - uses: crate-ci/typos@master
