--- a/.github/workflows/prevent_typos.yaml
+++ b/.github/workflows/prevent_typos.yaml
@@ -10,3 +10,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: crate-ci/typos@master
+        with:
+          config: .github/.typos-config.toml
