--- a/.github/workflows/prevent_typos.yaml
+++ b/.github/workflows/prevent_typos.yaml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: crate-ci/typos@master
         with:
-          config: .github/.typos-config.toml
+          config: .github/.typos_config.toml
