--- a/.github/.typos_config.toml
+++ b/.github/.typos_config.toml
@@ -1,4 +1,4 @@
 # See: https://github.com/crate-ci/typos#false-positives
 
 [files]
-extend-exclude = ["linux/**/*"]
+extend-exclude = ["assets/**/*", "*.pbxproj", "website/static/**/*"]
