--- a/.github/workflows/prevent_typos.yaml
+++ b/.github/workflows/prevent_typos.yaml
@@ -5,7 +5,7 @@ name: Prevent typos
 on: pull_request
 
 jobs:
-  check:
+  check_typos:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
