--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -62,7 +62,7 @@ jobs:
           cache: true
       - name: setup flutter channel
         shell: bash
-        run: ./scripts/setup_flutter.sh
+        run: .github/scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
         run: ${{ matrix.setup_desktop_script }}
