Revert "mv setup_flutter scirpt"
This reverts commit adbe08c5e7b1ea62a9546cbadf4af34775f2b3c3.

--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -28,7 +28,7 @@ jobs:
           cache: true
       - name: setup flutter channel
         shell: bash
-        run: .github/scripts/setup_flutter.sh
+        run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
         run: .github/scripts/macos/setup.sh
