--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -38,7 +38,7 @@ jobs:
           cache: true
       - name: setup flutter channel
         shell: bash
-        run: .github/scripts/setup_flutter.sh
+        run: ./scripts/setup_flutter.sh
       - run: flutter format -l 120 --set-exit-if-changed .
 
   analyze:
@@ -51,7 +51,7 @@ jobs:
           cache: true
       - name: setup flutter channel
         shell: bash
-        run: .github/scripts/setup_flutter.sh
+        run: ./scripts/setup_flutter.sh
       - name: install dependencies
         run: flutter pub get
       - run: flutter analyze --fatal-infos --fatal-warnings .
@@ -78,7 +78,7 @@ jobs:
       - uses: subosito/flutter-action@v2.3.0
       - name: setup flutter channel
         shell: bash
-        run: .github/scripts/setup_flutter.sh
+        run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
         run: ${{ matrix.setup_desktop_script }}
