--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,7 +43,7 @@ jobs:
       - uses: subosito/flutter-action@v2.3.0
       - name: setup flutter channel
         shell: bash
-        run: .github/scripts/setup_flutter.sh
+        run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
         run: ${{ matrix.setup_desktop_script }}
