--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -42,7 +42,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2.3.0
       - name: setup flutter channel
-        shell: bash
+        shell: zsh {0}
         run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
