Revert "run setup_flutter.sh on zsh only"
This reverts commit d38862ca900499d709aa6874164aceb3599b7323.

--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -27,7 +27,7 @@ jobs:
         with:
           cache: true
       - name: setup flutter channel
-        shell: zsh {0}
+        shell: bash
         run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
