--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -18,7 +18,7 @@ jobs:
           cache: true
       - run: flutter doctor -v
       - name: setup flutter channel
-        shell: zsh {0}
+        shell: bash
         run: ./scripts/setup_flutter.sh
 
       - run: flutter pub upgrade --null-safety # See: https://dart.dev/tools/pub/cmd/pub-upgrade#--null-safety
