--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -16,6 +16,7 @@ on:
       - 'scripts/deploy_macos_app_to_app_store.sh'
       - '.github/workflows/deploy_macos_dry_run.yaml'
       - 'pubspec.*'
+  workflow_dispatch:
 
 jobs:
   deployment:
