--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -19,7 +19,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  deployment:
+  dry_run_macos_deployment_script:
     runs-on: macos-latest
     timeout-minutes: 30
     steps:
