--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -28,7 +28,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  flutter_build_desktop_app:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
     strategy:
