mild fix message

--- a/.github/workflows/deploy_macos_dry_run.counterpart.yaml
+++ b/.github/workflows/deploy_macos_dry_run.counterpart.yaml
@@ -23,4 +23,4 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
-      - run: 'echo "required nothing. See: .github/workflows/README.md" '
+      - run: 'echo "passed See: .github/workflows/README.md" '
