--- a/.github/workflows/flutter_ci.counterpart.yaml
+++ b/.github/workflows/flutter_ci.counterpart.yaml
@@ -45,4 +45,4 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
     steps:
-      - run: 'echo "passed See: .github/workflows/README.md" '
+      - uses: ./.github/workflows/always_success.yaml
