--- a/.github/workflows/shell_script_ci.counterpart.yaml
+++ b/.github/workflows/shell_script_ci.counterpart.yaml
@@ -16,4 +16,4 @@ jobs:
   shellcheck:
     runs-on: ubuntu-latest
     steps:
-      - run: 'echo "passed See: .github/workflows/README.md" '
+      - uses: ./.github/workflows/always_success.yaml
